manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: threads-api-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: threads-api
